--- a/index.html
+++ b/index.html
@@ -13,7 +13,8 @@
     "react/": "https://aistudiocdn.com/react@^19.1.1/",
     "react": "https://aistudiocdn.com/react@^19.1.1",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^7.8.2",
-    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.57.2"
+    "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.57.2",
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^0.14.2"
   }
 }
 </script>
