--- a/index.html
+++ b/index.html
@@ -14,7 +14,8 @@
     "react": "https://aistudiocdn.com/react@^18.2.0",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^6.23.0",
     "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.43.4",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^0.14.0"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^0.14.0",
+    "jspdf": "https://aistudiocdn.com/jspdf@^2.5.1"
   }
 }
 </script>
