--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <link rel="icon" type="image/x-icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>MyKap ERP</title>
+    <!-- Quill Rich Text Editor CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/quill@2.0.2/dist/quill.snow.css" rel="stylesheet" />
 <script type="importmap">
 {
   "imports": {
@@ -15,7 +17,12 @@
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^6.23.0",
     "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.43.4",
     "@google/genai": "https://aistudiocdn.com/@google/genai@^0.14.0",
-    "jspdf": "https://aistudiocdn.com/jspdf@^2.5.1"
+    "jspdf": "https://aistudiocdn.com/jspdf@^2.5.1",
+    "quill": "https://aistudiocdn.com/quill@^2.0.2",
+    "html-to-pdfmake": "https://aistudiocdn.com/html-to-pdfmake@^2.5.1",
+    "pdfmake/build/pdfmake": "https://aistudiocdn.com/pdfmake@^0.2.10/build/pdfmake.min.js",
+    "pdfmake/build/vfs_fonts": "https://aistudiocdn.com/pdfmake@^0.2.10/build/vfs_fonts.js",
+    "pdfmake/": "https://aistudiocdn.com/pdfmake@^0.2.20/"
   }
 }
 </script>
