refactor: Update Quill dependencies and simplify editor toolbar
Updates the CDN version for Quill to a newer minor release and removes custom undo/redo icon components. The Quill editor's toolbar configuration is simplified to use the direct selector, as Quill's history module now provides built-in undo/redo functionality that can be invoked via its standard toolbar buttons. This streamlines the code and leverages Quill's native capabilities.

--- a/index.html
+++ b/index.html
@@ -22,7 +22,8 @@
     "html-to-pdfmake": "https://aistudiocdn.com/html-to-pdfmake@^2.5.1",
     "pdfmake/build/pdfmake": "https://aistudiocdn.com/pdfmake@^0.2.10/build/pdfmake.min.js",
     "pdfmake/build/vfs_fonts": "https://aistudiocdn.com/pdfmake@^0.2.10/build/vfs_fonts.js",
-    "pdfmake/": "https://aistudiocdn.com/pdfmake@^0.2.20/"
+    "pdfmake/": "https://aistudiocdn.com/pdfmake@^0.2.20/",
+    "quill/": "https://aistudiocdn.com/quill@^2.0.3/"
   }
 }
 </script>
