refactor: Remove unused dependencies and code
Removes the `quill`, `pdfmake`, `html-to-pdfmake` dependencies from index.html as they are no longer used.
Also removes the `numberToWords` function from `utils/formatters.ts` and the `useTemplates` hook from `hooks/useTemplates.ts` as they are unused.

--- a/index.html
+++ b/index.html
@@ -14,11 +14,7 @@
     "react": "https://aistudiocdn.com/react@^18.2.0",
     "react-router-dom": "https://aistudiocdn.com/react-router-dom@^6.23.0",
     "@supabase/supabase-js": "https://aistudiocdn.com/@supabase/supabase-js@^2.43.4",
-    "@google/genai": "https://aistudiocdn.com/@google/genai@^0.14.0",
-    "quill/": "https://aistudiocdn.com/quill@^2.0.3/",
-    "quill": "https://aistudiocdn.com/quill@^2.0.3",
-    "pdfmake/": "https://aistudiocdn.com/pdfmake@^0.2.20/",
-    "html-to-pdfmake": "https://aistudiocdn.com/html-to-pdfmake@^2.5.32"
+    "@google/genai": "https://aistudiocdn.com/@google/genai@^0.14.0"
   }
 }
 </script>
